--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "seed": "node ./prisma/seed.mjs"
   },
+  "prisma": {
+    "seed": "node ./prisma/seed.mjs"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.5.0",
