--- a/public/pwa/manifest.json
+++ b/public/pwa/manifest.json
@@ -1,13 +1,37 @@
 {
   "name": "Osteodinamic",
-  "short_name": "osteadinamic",
-  "theme_color": "#ffffff",
-  "background_color": "#dafb6f",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
-  "description": "Osteodinamic",
+  "short_name": "osteodinamic",
   "icons": [
+    {
+      "src": "icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
     {
       "src": "icon-192x192.png",
       "sizes": "192x192",
@@ -24,9 +48,13 @@
       "type": "image/png"
     },
     {
-      "src": "icon-256x256.png",
+      "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000"
 }
