--- a/public/pwa/manifest.json
+++ b/public/pwa/manifest.json
@@ -54,6 +54,8 @@
     }
   ],
   "start_url": "/",
+  "scope": "/",
+  "description": "Osteodinamic",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000"
